language/move-lang/tests/move_check/typing/recursive_local.move
address 0x42 {
module M {
    fun t() {
        let x;
        x = (x, 0);
    }
}
}
